[package]
name = "auth_service"      
version = "0.1.0"         
edition = "2021"          
[dependencies]
actix-web = "4" 
serde = { version = "1.0", features = ["derive"] }   
serde_json = "1.0"        
mongodb = { version = "2.0", default-features = false, features = ["tokio-runtime"] } 
bcrypt = "0.11"        
jsonwebtoken = "9.3.0"
dotenv = "0.15"         
chrono = { version = "0.4", features = ["serde"] }    

