[package]
name = "content_management_service"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4" 
serde = { version = "1.0", features = ["derive"] }   
serde_json = "1.0"        
mongodb = { version = "2.0", default-features = false, features = ["tokio-runtime"] } 
bcrypt = "0.11"        
jsonwebtoken = "9.3.0"
dotenv = "0.15"         
futures-util = "0.3.31"
percent-encoding = "2.3.1"
log = "0.4.22"
env_logger = "0.11.5"
aws-sdk-s3 = "1.54.0"
aws-config = "1.5.8"
uuid = { version = "1", features = ["v4"] }