[package]
name = "upload_service"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4" 
serde = { version = "1.0", features = ["derive"] }   
serde_json = "1.0"        
bcrypt = "0.11"        
jsonwebtoken = "9.3.0"
dotenv = "0.15"         
futures-util = "0.3.31"
actix-multipart = "0.7.2"
uuid = { version = "1", features = ["v4"] }
aws-sdk-s3 = "1.54.0"
aws-config = "1.5.8"